# github-backup-rust

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DOCKER.md  Dockerfile  README.md  SECURITY.md  clippy.toml  compose.example.env  deny.toml  docker-compose.yml  mutants.toml
.cargo/: audit.toml  mutants.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml
crates/github-backup/: Cargo.toml
crates/github-backup-client/: Cargo.toml
crates/github-backup-client/src/: api_client.rs  client.rs  error.rs  lib.rs  oauth.rs  pagination.rs  rate_limit.rs
crates/github-backup-client/src/api_client/: impl_github.rs  mod.rs
crates/github-backup-client/src/client/: endpoints.rs  mod.rs  proxy.rs
crates/github-backup-client/src/client/endpoints/: actions.rs  community.rs  issues.rs  keys.rs  mod.rs  org.rs  pulls.rs  repo_meta.rs  repos.rs  social.rs  write.rs
crates/github-backup-core/: Cargo.toml
crates/github-backup-core/src/: engine.rs  error.rs  events.rs  git.rs  lib.rs  lock.rs  manifest.rs  starred_queue.rs  stats.rs  storage.rs
crates/github-backup-core/src/backup/: actions.rs  branches.rs  collaborators.rs  deploy_keys.rs  discussion.rs  environments.rs  gist.rs  hooks.rs  integration_tests.rs  issue.rs  labels.rs  milestones.rs  mock_client.rs  mod.rs  package.rs  project.rs  pull_request.rs  release.rs  repository.rs  repository_tests.rs  security_advisories.rs  starred_repos.rs  starred_repos_tests.rs  topics.rs  user_data.rs  wiki.rs
crates/github-backup-core/src/git/: askpass.rs  mod.rs  spy.rs
crates/github-backup-mirror/: Cargo.toml
crates/github-backup-mirror/src/: client.rs  config.rs  error.rs  gitlab_client.rs  gitlab_runner.rs  lib.rs  runner.rs
crates/github-backup-s3/: Cargo.toml
crates/github-backup-s3/src/: client.rs  config.rs  encrypt.rs  error.rs  lib.rs  signing.rs  sync.rs
crates/github-backup-tui/: Cargo.toml
crates/github-backup-tui/src/: app.rs  event.rs  lib.rs  progress.rs  state.rs  tests.rs  theme.rs  tracing_layer.rs
crates/github-backup-tui/src/screens/: configure.rs  dashboard.rs  mod.rs  results.rs  running.rs  verify.rs
crates/github-backup-types/: Cargo.toml
crates/github-backup-types/benches/: glob.rs
crates/github-backup-types/src/: backup_state.rs  branch.rs  branch_protection.rs  collaborator.rs  config.rs  config_tests.rs  deploy_key.rs  discussion.rs  environment.rs  gist.rs  glob.rs  hook.rs  issue.rs  label.rs  lib.rs  milestone.rs  package.rs  project.rs  pull_request.rs  release.rs  repository.rs  security_advisory.rs  starred_queue.rs  team.rs  user.rs  workflow.rs
crates/github-backup-types/src/config/: clone_type.rs  credential.rs  file.rs  mod.rs  options.rs  output.rs  tests.rs
crates/github-backup-types/tests/: proptest_serde.rs
crates/github-backup/src/: cli.rs  lock.rs  main.rs  notify.rs  post_process.rs  report.rs  restore.rs
crates/github-backup/src/cli/: args.rs  args_impl.rs  args_tests.rs  clone_type.rs  mod.rs
docs/: book.toml
docs/src/: SUMMARY.md  backup-categories.md  docker.md  faq.md  gists-and-wikis.md  introduction.md  issues-and-prs.md  mirroring.md  monitoring.md  ops-runbook.md  releases.md  restore.md  tui.md  user-data.md
docs/src/configuration/: cli-reference.md  config-file.md  environment.md  github-enterprise.md  output-layout.md
docs/src/deployment/: cron.md  systemd.md
docs/src/development/: architecture.md  changelog.md  contributing.md  restore.md  security.md  troubleshooting.md
docs/src/getting-started/: authentication.md  installation.md  quick-start.md
docs/src/storage/: encryption.md  local.md  s3.md
