[package]
name        = "github-backup-client"
description = "Async GitHub REST API client for github-backup-rust (hyper + rustls, no OpenSSL)"
version.workspace       = true
edition.workspace       = true
rust-version.workspace  = true
authors.workspace       = true
license.workspace       = true
repository.workspace    = true
homepage.workspace      = true
documentation.workspace = true
keywords.workspace      = true
categories.workspace    = true

# Internal workspace crate. Not published to crates.io.
publish                 = false

[dependencies]
github-backup-types = { workspace = true }
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
hyper-rustls = { workspace = true }
tokio-rustls = { workspace = true }
tower-service = { workspace = true }
base64 = { workspace = true }
rustls = { workspace = true }
rustls-native-certs = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-test = { workspace = true }
