[package]
name        = "github-backup-core"
description = "Trait-based backup engine for github-backup-rust"
version.workspace       = true
edition.workspace       = true
rust-version.workspace  = true
authors.workspace       = true
license.workspace       = true
repository.workspace    = true
homepage.workspace      = true
documentation.workspace = true
keywords.workspace      = true
categories.workspace    = true

[dependencies]
github-backup-types = { workspace = true }
github-backup-client = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-test = { workspace = true }
tempfile = "3"
