[package]
name        = "github-backup-s3"
description = "S3-compatible storage backend with AES-256-GCM at-rest encryption for github-backup-rust (pure Rust, no AWS SDK)"
version.workspace       = true
edition.workspace       = true
rust-version.workspace  = true
authors.workspace       = true
license.workspace       = true
repository.workspace    = true
homepage.workspace      = true
documentation.workspace = true
keywords.workspace      = true
categories.workspace    = true

# Internal workspace crate. Not published to crates.io.
publish                 = false

[dependencies]
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
hyper-rustls = { workspace = true }
rustls = { workspace = true }
rustls-native-certs = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
aes-gcm = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }
proptest = { workspace = true }
