[package]
name        = "github-backup-tui"
description = "Ratatui terminal user interface for github-backup-rust"
version.workspace       = true
edition.workspace       = true
rust-version.workspace  = true
authors.workspace       = true
license.workspace       = true
repository.workspace    = true
homepage.workspace      = true
documentation.workspace = true
keywords.workspace      = true
categories.workspace    = true

[dependencies]
# TUI framework
ratatui = "0.30"

# Workspace dependencies
github-backup-types  = { workspace = true }
github-backup-client = { workspace = true }
github-backup-core   = { workspace = true }
github-backup-mirror = { workspace = true }
github-backup-s3     = { workspace = true }
tokio        = { workspace = true }
serde_json   = { workspace = true }
chrono       = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror    = { workspace = true }
toml         = { workspace = true }
