[package]
name        = "github-backup-tui"
description = "Ratatui terminal user interface for github-backup-rust"
version.workspace       = true
edition.workspace       = true
rust-version.workspace  = true
authors.workspace       = true
license.workspace       = true
repository.workspace    = true
homepage.workspace      = true
documentation.workspace = true
keywords.workspace      = true
categories.workspace    = true

# Internal workspace crate. Not published to crates.io.
publish                 = false

[dependencies]
# TUI framework
#
# Disable default features and re-enable only what we use, so the heavy
# `ratatui-termwiz` backend (and its transitive `phf_generator` -> `rand 0.8`
# tree) is excluded from the build. We only render through the crossterm
# backend, so termwiz is dead weight.
ratatui = { version = "0.30", default-features = false, features = [
    "crossterm",
    "macros",
    "all-widgets",
    "layout-cache",
    "underline-color",
    "widget-calendar",
    "std",
] }

# Workspace dependencies
github-backup-types  = { workspace = true }
github-backup-client = { workspace = true }
github-backup-core   = { workspace = true }
github-backup-mirror = { workspace = true }
github-backup-s3     = { workspace = true }
tokio        = { workspace = true }
serde_json   = { workspace = true }
chrono       = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror    = { workspace = true }
toml         = { workspace = true }
