[package]
name = "github-backup-types"
description = "GitHub API response types and backup configuration for github-backup-rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
proptest = { workspace = true }
