[package]
name = "github-backup"
description = "Comprehensive GitHub backup tool: repos, issues, PRs, releases, gists, and more"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "github-backup"
path = "src/main.rs"

[dependencies]
github-backup-types = { workspace = true }
github-backup-client = { workspace = true }
github-backup-core = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
