[package]
name        = "github-backup"
description = "GitHub backup tool: repositories, issues, PRs, releases, gists, wikis, and metadata"
version.workspace       = true
edition.workspace       = true
rust-version.workspace  = true
authors.workspace       = true
license.workspace       = true
repository.workspace    = true
homepage.workspace      = true
documentation.workspace = true
keywords.workspace      = true
categories.workspace    = true

# Not published to crates.io. This project ships as pre-built binaries
# on GitHub Releases, multi-arch container images on GHCR, and source
# install via `cargo install --git`. See docs/src/getting-started/installation.md.
publish                 = false

[[bin]]
name = "github-backup"
path = "src/main.rs"

[dependencies]
github-backup-types = { workspace = true }
github-backup-client = { workspace = true }
github-backup-core = { workspace = true }
github-backup-mirror = { workspace = true }
github-backup-s3 = { workspace = true }
github-backup-tui = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zeroize = { workspace = true }
bytes = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
hyper-rustls = { workspace = true }
rustls = { workspace = true }
rustls-native-certs = { workspace = true }
chrono = { workspace = true }
fslock = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
